# photos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
examples/: Makefile  README.md  download_images.sh  pelicanconf.py  publishconf.py  requirements.txt  tasks.py
examples/content/articles/: article-with-gallery.md  article-with-image.md  article-with-inline-gallery.md  article-with-inline-image.md  article-without-images.md
examples/content/galleries/article/: _sources.txt
examples/content/galleries/example_gallery/: _sources.txt  captions.txt  exif.txt
examples/content/pages/: page-with-gallery.md  page-with-image.md  page-with-inline-gallery.md  page-with-inline-image.md
examples/themes/notmyidea_photos/templates/: article.html  base.html  index.html  inline_gallery.html  inline_image.html  inline_lightbox.html  lightbox_gallery.html  page.html  photos_macros.html
pelican/plugins/photos/: __init__.py  photos.py  test_photos.py
