[project]
name = "pelican-photos"
version = "1.6.0"
authors = [
    { name = "Joaquim Baptista", email = "pxquim@gmail.com"},
]
description = "Add a photo or a gallery of photos to an article"
license = {text = "AGPL-3.0"}
readme = "README.md"
keywords = ["pelican", "plugin", "photos", "image"]
repository = "https://github.com/pelican-plugins/photos"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.8.1,<4.0"
dependencies = [
    "pelican>=4.5",
    "piexif~=1.1.3",
    "Pillow>=10.0.1,<12.0.0",
]

[project.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/photos/issues"

[project.optional-dependencies]
markdown = [
    "markdown"
]

[tool.pdm.dev-dependencies]
lint = [
    "invoke>=2.2.0",
    "ruff>=0.4,<0.5",
]
test = [
    "markdown>=3.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-sugar>=0.9.7",
]

[tool.autopub]
project-name = "Photos"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "D100",    # missing docstring in public module
  "D101",    # missing docstring in public class
  "D102",    # missing docstring in public method
  "D103",    # missing docstring in public function
  "D104",    # missing docstring in public package
  "D105",    # missing docstring in magic method
  "D107",    # missing docstring in __init__
  "D203",    # blank line before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "ISC001",  # disabled so that format works without warning
  "PGH004",  # use specific rule codes when using `NOQA`
  "PLR2004", # Magic value used in comparison
  "PLW0603", # allow global variables
  "RUF100",  # unused blanket `NOQA` directive
  "TRY003",  # long messages outside of the exception class
  "TRY400",  # logging.error instead of logging.exception -- we catch and release
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pelican"]

[tool.pdm]

[tool.pdm.build]
source-includes = [
    "CONTRIBUTING.rst",
    "examples/",
]
includes = ["pelican/"]
excludes = ["**/test_data/**"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
